# underkingBot

./: .gitignore  bot.py  manage.py  pyproject.toml
game/: models.py
game/management/commands/: launchbot.py
underkingbot/: asgi.py  settings.py  urls.py  wsgi.py
